alerts tournament wip

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -82,7 +82,13 @@
     Friendship does not exist
 </div>
 
+<div class="alert alert-danger" role="alert" id="Request-does-not-exist" onclick="hideAlert(this)" style="display: none;">
+    Request does not exist
+</div>
 
+<div class="alert alert-danger" role="alert" id="tournament-already-open" onclick="hideAlert(this)" style="display: none;">
+    There is already one open tournament
+</div>
 
 
 
