--- a/app/frontend/html/templates/en/header-loggedin.html
+++ b/app/frontend/html/templates/en/header-loggedin.html
@@ -1,13 +1,3 @@
-<!-- <div id="h_logo"><a id="logo_link_override" href="#" data-route="/">TRANSCENDENCE.</a></div>
-<div class="language_switcher_container" id="languageSwitcher">
-<button class="language-switcher" data-lang="en">EN</button>
-<button class="language-switcher" data-lang="es">ES</button>
-<button class="language-switcher" data-lang="fr">FR</button>
-</div>
-<div class="h_basic" id="h_tournaments"><a href="#tournaments">TOURNAMENT</a></div>
-<div class="h_basic" id="h_scores"><a href="#scores">SCORES</a></div>
-<div id="h_profile"> <a href="#profile">PROFILE</a></div>
-<div id="h_logout"> <a onclick="AuthLb.logout()">LOGOUT</a></div> -->
 
 <div class="tr_header">
     <div id="h_logo_container"><a href="#"><img id="h_logo" src="../media/Transcendence_Logo.svg"></a></div>
@@ -16,7 +6,7 @@
         <button class="h_flag_button"><img class="h_flag" src="../media/uk_flag.svg" data-lang="en"></button>
         <button class="h_flag_button"><img class="h_flag" src="../media/french_flag.svg" data-lang="fr"></button>
     </div>
-    <div href="#tournaments" class="h_basic">TOURNAMENTS</div>
+    <a href="#tournaments"><div class="h_basic">TOURNAMENTS</div></a>
     <a href="#scoreboard"><div class="h_basic">SCOREBOARD</div></a>
     <a href="#profile"><div class="h_basic">PROFILE</div></a>
     <button class="h_flag_button"><img id="h_logout" src="../media/logout_icon.svg" onclick="AuthLb.logout()"></button>
