--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -87,10 +87,20 @@
 </div>
 
 <div class="alert alert-danger" role="alert" id="tournament-already-open" onclick="hideAlert(this)" style="display: none;">
-    There is already one open tournament
+    You have an unfinished tournament, finish it before creating a new one
 </div>
 
+<div class="alert alert-danger" role="alert" id="tournament-name-taken" onclick="hideAlert(this)" style="display: none;">
+    Tournament name already taken
+</div>
 
+<div class="alert alert-danger" role="alert" id="invalid-game-type" onclick="hideAlert(this)" style="display: none;">
+    Invalid game type
+</div>
+
+<div class="alert alert-danger" role="alert" id="not-enough-players" onclick="hideAlert(this)" style="display: none;">
+    Not enough players
+</div>
 
 
 
