tournament invite wip

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -101,7 +101,8 @@
 <div class="alert alert-danger" role="alert" id="not-enough-players" onclick="hideAlert(this)" style="display: none;">
     Not enough players
 </div>
-
-
-
+<!-- invite not found -->
+<div class="alert alert-danger" role="alert" id="no-invite" onclick="hideAlert(this)" style="display: none;">
+    Invite does not exist
+</div>
 
