--- a/app/frontend/html/templates/fr/settings.html
+++ b/app/frontend/html/templates/fr/settings.html
@@ -24,7 +24,7 @@
         </div>
         
         <button class="form_settings_button">Change profile picture</button>
-        <a href="friend_list_editor.html"><button class="form_settings_button">Add/Remove friends</button></a>
+        <a href="#friends"><button class="form_settings_button">Add/Remove friends</button></a>
         <button class="form_settings_button" onclick="showItem('anonymize_confirmation_overlay')">Anonymize account</button>
         <button class="form_settings_button" onclick="showItem('delete_confirmation_overlay')">Delete account [!]</button>
         <a href="#profile"><button class="form_main_button">Back</button></a>
