--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -1,108 +1,127 @@
 <!-- info alerts are sent on success danger alerts are sent on error -->
 
-<div class="alert alert-danger" role="alert" id="form-alert" onclick="hideAlert(this)" style="display: none;"></div>
+<div class="alert text-center alert-danger" role="alert" id="form-alert" onclick="hideAlert(this)" style="display: none;"></div>
 
-<div class="alert alert-danger" role="alert" id="user-exists-alert" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="user-exists-alert" onclick="hideAlert(this)" style="display: none;">
     Username already exists
 </div>
 
-<div class="alert alert-danger" role="alert" id="email-exists-alert" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="email-exists-alert" onclick="hideAlert(this)" style="display: none;">
     Email already exists
 </div>
 
-<div class="alert alert-danger" role="alert" id="invalid-credentials-alert" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="invalid-credentials-alert" onclick="hideAlert(this)" style="display: none;">
     Invalid credentials
 </div>
 
-<div class="alert alert-danger" role="alert" id="deleted-account" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="deleted-account" onclick="hideAlert(this)" style="display: none;">
     Account deleted
 </div>
 
-<div class="alert alert-info" role="alert" id="2fa-required" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-info" role="alert" id="2fa-required" onclick="hideAlert(this)" style="display: none;">
     Two-factor authentication required
 </div>
 
-<div class="alert alert-danger" role="alert" id="invalid-username" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="invalid-username" onclick="hideAlert(this)" style="display: none;">
     Invalid username
 </div>
 
-<div class="alert alert-danger" role="alert" id="invalid-OTP" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="invalid-OTP" onclick="hideAlert(this)" style="display: none;">
     Invalid OTP
 </div>
 
-<div class="alert alert-danger" role="alert" id="OTP-not-set" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="OTP-not-set" onclick="hideAlert(this)" style="display: none;">
     OTP not set
 </div>
 
-<div class="alert alert-danger" role="alert" id="Already-logged-out" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="Already-logged-out" onclick="hideAlert(this)" style="display: none;">
     Already logged out
 </div>
 
-<div class="alert alert-danger" role="alert" id="login-error" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="login-error" onclick="hideAlert(this)" style="display: none;">
     Could not log in
 </div>
 
-<div class="alert alert-info" role="alert" id="Profile-updated" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-info" role="alert" id="Profile-updated" onclick="hideAlert(this)" style="display: none;">
     Profile updated successfully
 </div>
 
-<div class="alert alert-info" role="alert" id="Account-deleted-success" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-info" role="alert" id="Account-deleted-success" onclick="hideAlert(this)" style="display: none;">
     Account deleted successfully
 </div>
 
-<div class="alert alert-danger" role="alert" id="Invalid-language-preference" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="Invalid-language-preference" onclick="hideAlert(this)" style="display: none;">
     Invalid language preference
 </div>
 
-<div class="alert alert-danger" role="alert" id="Unauthorized" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="Unauthorized" onclick="hideAlert(this)" style="display: none;">
     Unauthorized
 </div>
 
-<div class="alert alert-info" role="alert" id="Account-anonymized-succes" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-info" role="alert" id="Account-anonymized-succes" onclick="hideAlert(this)" style="display: none;">
     Account anonymized successfully
 </div>
 
-<div class="alert alert-danger" role="alert" id="self-request" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="self-request" onclick="hideAlert(this)" style="display: none;">
     Cannot send a request to yourself
 </div>
 
-<div class="alert alert-danger" role="alert" id="request-sent" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="request-sent" onclick="hideAlert(this)" style="display: none;">
     Request already sent
 </div>
 
-<div class="alert alert-danger" role="alert" id="alredy-friends" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="alredy-friends" onclick="hideAlert(this)" style="display: none;">
     Your are already friends
 </div>
 
-<div class="alert alert-info" role="alert" id="request-sent" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-info" role="alert" id="request-sent" onclick="hideAlert(this)" style="display: none;">
     Request sent
 </div>
 
-<div class="alert alert-danger" role="alert" id="Friendship-does-not-exist" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="Friendship-does-not-exist" onclick="hideAlert(this)" style="display: none;">
     Friendship does not exist
 </div>
 
-<div class="alert alert-danger" role="alert" id="Request-does-not-exist" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="Request-does-not-exist" onclick="hideAlert(this)" style="display: none;">
     Request does not exist
 </div>
 
-<div class="alert alert-danger" role="alert" id="tournament-already-open" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="tournament-already-open" onclick="hideAlert(this)" style="display: none;">
     You have an unfinished tournament, finish it before creating a new one
 </div>
 
-<div class="alert alert-danger" role="alert" id="tournament-name-taken" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="tournament-name-taken" onclick="hideAlert(this)" style="display: none;">
     Tournament name already taken
 </div>
 
-<div class="alert alert-danger" role="alert" id="invalid-game-type" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="invalid-game-type" onclick="hideAlert(this)" style="display: none;">
     Invalid game type
 </div>
 
-<div class="alert alert-danger" role="alert" id="not-enough-players" onclick="hideAlert(this)" style="display: none;">
+<div class="alert text-center alert-danger" role="alert" id="not-enough-players" onclick="hideAlert(this)" style="display: none;">
     Not enough players
 </div>
-<!-- invite not found -->
-<div class="alert alert-danger" role="alert" id="no-invite" onclick="hideAlert(this)" style="display: none;">
+
+<div class="alert text-center alert-danger" role="alert" id="no-invite" onclick="hideAlert(this)" style="display: none;">
     Invite does not exist
 </div>
 
+<div class="alert text-center alert-danger" role="alert" id="file-size" onclick="hideAlert(this)" style="display: none;">
+    File size can't exceed 8MB
+</div>
+
+<div class="alert text-center alert-danger" role="alert" id="file-type" onclick="hideAlert(this)" style="display: none;">
+    File type not supported 
+</div>
+
+<div class="alert text-center alert-danger" role="alert" id="file-dimensions" onclick="hideAlert(this)" style="display: none;">
+    File dimensions can't exceed 500x500
+</div>
+
+<div class="alert text-center alert-success" role="alert" id="pic-updated" onclick="hideAlert(this)" style="display: none;">
+    Profile picture updated
+</div>
+
+<div class="alert text-center alert-success" role="alert" id="pic-deleted" onclick="hideAlert(this)" style="display: none;">
+    Profile picture deleted
+</div>
