tournaments create wip

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -101,8 +101,19 @@
 <div class="alert alert-danger" role="alert" id="not-enough-players" onclick="hideAlert(this)" style="display: none;">
     Not enough players
 </div>
-<!-- invite not found -->
+
 <div class="alert alert-danger" role="alert" id="no-invite" onclick="hideAlert(this)" style="display: none;">
     Invite does not exist
 </div>
 
+<div class="alert alert-danger" role="alert" id="no-tournament" onclick="hideAlert(this)" style="display: none;">
+    No tournament available
+</div>
+
+<div class="alert alert-danger" role="alert" id="duplicated-user" onclick="hideAlert(this)" style="display: none;">
+    Duplicated user
+</div>
+
+<div class="alert alert-danger" role="alert" id="user-not-exists" onclick="hideAlert(this)" style="display: none;">
+    User does not exist
+</div>
