--- a/app/frontend/html/templates/en/tournament_home.html
+++ b/app/frontend/html/templates/en/tournament_home.html
@@ -1,7 +1,8 @@
 <div class="form_container">
     <div class="form_body_xl">
         <p class="form_title">Tournaments</p>
-        <button class="form_main_button_reduced_margin" onclick="changeLocation('#createTournament')">Create New Tournament</button>
+        <!-- <button class="form_main_button_reduced_margin" onclick="changeLocation('#createTournament')">Create New Tournament</button> -->
+        <a href="#createTournament"><button class="form_main_button_reduced_margin">Create New Tournament</button></a>
         <hr class="hr_form_separator">
         <p class="form_title">My Invitations</p>
         <div class="tour_home_subscroll">
