fixed checking for new password when changing any setting, alert css

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -135,3 +135,7 @@
 <div class="alert alert-danger" role="alert" id="user-not-exists" onclick="hideAlert(this)" style="display: none;">
     User does not exist
 </div>
+
+<div class="alert alert-danger" role="alert" id="password-not-match" onclick="hideAlert(this)" style="display: none;">
+    Passwords do not match
+</div>
