--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -50,10 +50,21 @@
     margin: 5px;
 }
 
-
-.alert_container {
+/* .alert_container {
     padding-top: 90px;
     padding-left: 20px;
     padding-right: 20px;
     z-index: 1;
+} */
+
+.alert_container {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -20%);
+    padding: 20px;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
