Finished profile integration, added user history and stats, fixed friends menu return button.

--- a/app/frontend/html/templates/en/friends.html
+++ b/app/frontend/html/templates/en/friends.html
@@ -15,6 +15,6 @@
                 <button class="pr_friend_delete" onclick="DeleteFriend(this.parentNode.id)">X</button>
             </div>
         </div>
-        <a href="settings.html"><button class="form_main_button_fle">Volver</button></a>
+        <a href="#settings"><button class="form_main_button_fle">Volver</button></a>
     </div>
 </div>
