--- a/app/frontend/html/templates/en/profile.html
+++ b/app/frontend/html/templates/en/profile.html
@@ -2,102 +2,92 @@
     <div id="pr_sidebar">
         <img id="pr_user_image" src="/media/Profile_avatar_placeholder_large.png">
         <div id="pr_infobox">
-            <p id="pr_username">ChaosKing</p>
-            <a href="#settings" class="pr_sidebar_link">Editar Perfil</a>
-            <p id="pr_friend_count">Amigos <span class="pr_highlight" id="pr_friend_count_number">0</span></p>
+            <p id="pr_username"></p>
+            <a href="#settings" class="pr_sidebar_link">Edit profile</a>
+            <p id="pr_friend_count">Friends <span class="pr_highlight" id="pr_friend_count_number">0</span></p>
         </div>
         <div id="pr_friendbox">
             <div class="pr_friend_request_item" id="request_template" style="display: none;">
-                    <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
-                    <div class="pr_friend_info">
-                        <p id="friend_username_template" class="pr_friend_username">NuevoAmigo1</p>
-                        <p id="friend_status_template" class="pr_friend_status_on">Conectado</p>
-                    </div>
-                    <button id="accept-template" class="pr_friend_accept_button" onclick="acceptFriendRequest(this, 'accept')">✓</button>
-                    <button id="decline-template" class="pr_friend_decline_button" onclick="acceptFriendRequest(this, 'reject')">✕</button>
+                <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
+                <div class="pr_friend_info">
+                    <p id="friend_username_template" class="pr_friend_username"></p>
+                    <p id="friend_status_template" class="pr_friend_status_on"></p>
+                </div>
+                <button id="accept-template" class="pr_friend_accept_button"
+                    onclick="acceptFriendRequest(this, 'accept')">✓</button>
+                <button id="decline-template" class="pr_friend_decline_button"
+                    onclick="acceptFriendRequest(this, 'reject')">✕</button>
             </div>
             <div class="pr_friend_item" id="friend_template" , style="display: none;">
-                    <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
-                    <div class="pr_friend_info">
-                        <p id="friend_username_template" class="pr_friend_username">Amigo1</p>
-                        <p id="friend_status_template" class="pr_friend_status_on">Conectado</p>
-                    </div>
+                <img id="img_template" class="pr_friend_image" src="/media/Profile_avatar_placeholder_large.png">
+                <div class="pr_friend_info">
+                    <p id="friend_username_template" class="pr_friend_username"></p>
+                    <p id="friend_status_template" class="pr_friend_status_on"></p>
+                </div>
             </div>
         </div>
     </div>
     <div id="pr_body">
         <div class="pr_stats_container">
-            <p class="pr_stats_header">HISTORIAL</p>
-            <div class="pr_history_item">
-                <p class="pr_history_item_title">1. Pong</p>
-                <p class="pr_history_item_winner">ChaosKing</p>
-                <p class="pr_history_item_opponent">Opponent</p>
+            <div id="pr_history" style="display: none;">
+                <p class="pr_stats_header">HISTORY</p>
+                <div id="pr_history_template_won">
+                    <div class="pr_history_item">
+                        <p class="pr_history_item_title" id="pr_history_title_template"></p>
+                        <p class="pr_history_item_winner" id="pr_history_winner_template"></p>
+                        <p class="pr_history_item_opponent" id="pr_history_opponent_template"></p>
+                    </div>
+                    <hr class="hr_stats">
+                </div>
+                <div id="pr_history_template_lost">
+                    <div class="pr_history_item">
+                        <p class="pr_history_item_title" id="pr_history_title_template"></p>
+                        <p class="pr_history_item_opponent" id="pr_history_opponent_template"></p>
+                        <p class="pr_history_item_loser" id="pr_history_loser_template"></p>
+                    </div>
+                    <hr class="hr_stats">
+                </div>
             </div>
-            <hr class="hr_stats">
-            <div class="pr_history_item">
-                <p class="pr_history_item_title">2. Pong</p>
-                <p class="pr_history_item_opponent">Mr. Big Boy, who has a pretty long username</p>
-                <p class="pr_history_item_loser">ChaosKing</p>
-            </div>
-            <hr class="hr_stats">
-            <div class="pr_history_item">
-                <p class="pr_history_item_title">3. Tic-Tac-Toe</p>
-                <p class="pr_history_item_winner">ChaosKing</p>
-                <p class="pr_history_item_opponent">Bruh</p>
-            </div>
-            <hr class="hr_stats">
-            <div class="pr_history_item">
-                <p class="pr_history_item_title">4. Pong</p>
-                <p class="pr_history_item_winner">ChaosKing</p>
-                <p class="pr_history_item_opponent">:)</p>
-            </div>
-            <hr class="hr_stats">
-            <div class="pr_history_item">
-                <p class="pr_history_item_title">5. Tic-Tac-Toe</p>
-                <p class="pr_history_item_winner">ChaosKing</p>
-                <p class="pr_history_item_opponent">Opponent</p>
-            </div>
-            <hr class="hr_stats">
         </div>
         <div class="pr_stats_container">
-            <p class="pr_stats_header">ESTADÍSTICAS</p>
+            <p class="pr_stats_header">STATS</p>
             <p id="pr_stats_subheader_pong">PONG</p>
             <div class="pr_stats_item">
-                <p class="pr_stats_text">Victorias</p>
-                <p class="pr_stats_wins">200</p>
+                <p class="pr_stats_text">Victories</p>
+                <p class="pr_stats_wins" id="pong_wins"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
-                <p class="pr_stats_text">Derrotas</p>
-                <p class="pr_stats_losses">100</p>
+                <p class="pr_stats_text">Losses</p>
+                <p class="pr_stats_losses" id="pong_losses"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
-                <div class="pr_stats_item_bar"></div>
-                <p class="pr_stats_text">Porcentaje</p>
-                <p class="pr_stats_winrate">75%</p>
+                <div class="pr_stats_item_bar" id="pong_wr_bar"></div>
+                <p class="pr_stats_text">Winrate</p>
+                <p class="pr_stats_winrate" id="pong_wr_text"></p>
             </div>
             <hr class="hr_stats">
             <p id="pr_stats_subheader_ttt">TIC-TAC-TOE</p>
             <div class="pr_stats_item">
-                <p class="pr_stats_text">Victorias</p>
-                <p class="pr_stats_wins">200</p>
+                <p class="pr_stats_text">Victories</p>
+                <p class="pr_stats_wins" id="ttt_wins"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
-                <p class="pr_stats_text">Derrotas</p>
-                <p class="pr_stats_losses">100</p>
+                <p class="pr_stats_text">Losses</p>
+                <p class="pr_stats_losses" id="ttt_losses"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
-                <p class="pr_stats_text">Empates</p>
-                <p class="pr_stats_draws">10</p>
+                <p class="pr_stats_text">Ties</p>
+                <p class="pr_stats_draws" id="ttt_ties"></p>
             </div>
             <hr class="hr_stats">
             <div class="pr_stats_item">
-                <div class="pr_stats_item_bar"></div>
-                <p class="pr_stats_text">Porcentaje</p>
-                <p class="pr_stats_winrate">75%</p>
+                <div class="pr_stats_item_bar" id="ttt_wr_bar"></div>
+                <p class="pr_stats_text">Winrate</p>
+                <p class="pr_stats_winrate" id="ttt_wr_text"></p>
             </div>
             <hr class="hr_stats">
         </div>
