fixed create tournament not working on the first interaction

--- a/app/frontend/html/templates/en/tournament_create.html
+++ b/app/frontend/html/templates/en/tournament_create.html
@@ -1,3 +1,4 @@
+
 <form>
     <div class="form_container">
         <div class="form_body_xl">
@@ -12,9 +13,9 @@
                 <input id="guest5" class="form_field_with_margin" type="text" placeholder="Jugador 6"/>
                 <input id="guest6" class="form_field_with_margin" type="text" placeholder="Jugador 7"/>
             </div>
-            <button class="form_main_button" onclick="createTournament('pong')" >Create Tournament [Pong]</button>
-            <button class="form_main_button_reduced_margin" onclick="createTournament('tic-tac-toe')" >Create Tournament [Tic-Tac-Toe]</button>
-            <button class="form_settings_button">Back</button>
+            <button class="form_main_button" type="button" onclick="createTournament('pong')" >Create Tournament [Pong]</button>
+            <button class="form_main_button_reduced_margin" type="button" onclick="createTournament('tic-tac-toe')" >Create Tournament [Tic-Tac-Toe]</button>
+            <button class="form_settings_button" type="button">Back</button>
         </div>
     </div>
 </form>
