--- a/app/frontend/html/templates/en/tournament_home.html
+++ b/app/frontend/html/templates/en/tournament_home.html
@@ -5,7 +5,7 @@
         <a href="#createTournament"><button class="form_main_button_reduced_margin">Create New Tournament</button></a>
         <hr class="hr_form_separator">
         <p class="form_title">My Invitations</p>
-        <div class="tour_home_subscroll">
+        <div id="tournaments_bar" class="tour_home_subscroll">
             <div class="tour_request_item" id="tour_invite_template" style="display: none;">
                 <img id="img_template" class="pr_friend_image" src="../media/Profile_avatar_placeholder_large">
                 <div class="pr_friend_info">
