Tweaked templates to fix outdated assets and broken margins

--- a/app/frontend/html/templates/en/tournament_create.html
+++ b/app/frontend/html/templates/en/tournament_create.html
@@ -13,7 +13,7 @@
                 <input id="guest6" class="form_field_with_margin" type="text" placeholder="Jugador 7"/>
             </div>
             <button class="form_main_button" onclick="createTournament('pong')" >Create Tournament [Pong]</button>
-            <button class="form_main_button_reduced_margin" onclick="createTournament('tic-tac-toe')" >Create Tournament [Tic-Tac-Toe]</button>
+            <button class="form_main_button_reduced_margin" onclick="createTournament('tic-tac-toe')" >Create Tournament [TTT]</button>
             <button class="form_settings_button">Back</button>
         </div>
     </div>
