--- a/app/frontend/html/templates/es/home.html
+++ b/app/frontend/html/templates/es/home.html
@@ -32,3 +32,13 @@
     </div>
     </a>
 </div>
+<hr class="hr_footer">
+<div id="footer_container">
+    <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
+    <p id="footer_credits">FT_Trascendence ha sido creado por el equipo [NOMBRE] para 42 Málaga.<br><br>
+    [NOMBRE 1] - [TRABAJO DESEMPEÑADO]<br>
+    [NOMBRE 2] - [TRABAJO DESEMPEÑADO]<br>
+    [NOMBRE 3] - [TRABAJO DESEMPEÑADO]<br>
+    [NOMBRE 4] - [TRABAJO DESEMPEÑADO]<br>
+    [NOMBRE 5] - [TRABAJO DESEMPEÑADO]</p>
+</div>
