--- a/app/frontend/html/templates/fr/home.html
+++ b/app/frontend/html/templates/fr/home.html
@@ -32,3 +32,13 @@
     </div>
     </a>
 </div>
+<hr class="hr_footer">
+<div id="footer_container">
+    <img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
+    <p id="footer_credits">FT_Transcendence has been created by the team [NOMBRE] for 42 Málaga.<br><br>
+    [NAME 1] - [JOB PERFORMED]<br>
+    [NAME 2] - [JOB PERFORMED]<br>
+    [NAME 3] - [JOB PERFORMED]<br>
+    [NAME 4] - [JOB PERFORMED]<br>
+    [NAME 5] - [JOB PERFORMED]</p>
+</div>
