--- a/app/frontend/html/templates/en/footer.html
+++ b/app/frontend/html/templates/en/footer.html
@@ -1,4 +1,4 @@
-<img id="footer_logo" src="media/logo.svg">
+<img id="footer_logo" src="media/Trascendence_Square_Logo.svg">
 <p id="footer_credits">FT_Transcendence has been created by the team [NOMBRE] for 42 Málaga.<br><br>
 [NAME 1] - [JOB PERFORMED]<br>
 [NAME 2] - [JOB PERFORMED]<br>
