--- a/app/frontend/html/templates/en/settings.html
+++ b/app/frontend/html/templates/en/settings.html
@@ -41,16 +41,16 @@
         <div id="delete_confirmation_overlay" class="overlay" style="display: none;">
             <div class="overlay_delete">
                 <p>Are you sure you want to delete your account? This action cannot be undone.</p>
-                <button class="form_settings_button" onclick="deleteAccount()">Delete</button>
-                <button class="form_settings_button" onclick="hideItem('delete_confirmation_overlay')">Cancel</button>
+                <button class="form_settings_popup_button" onclick="deleteAccount()">Delete</button>
+                <button class="form_settings_popup_button" onclick="hideItem('delete_confirmation_overlay')">Cancel</button>
             </div>
         </div>
         <!-- Anonymizew Account Confirmation Overlay  -->
         <div id="anonymize_confirmation_overlay" class="overlay" style="display: none;">
             <div class="overlay_anonymize">
                 <p>Are you sure you want to anonymize your account? This action cannot be undone.</p>
-                <button class="form_settings_button" onclick="anonymizeAccount()">Anonymize</button>
-                <button class="form_settings_button" onclick="hideItem('anonymize_confirmation_overlay')">Cancel</button>
+                <button class="form_settings_popup_button" onclick="anonymizeAccount()">Anonymize</button>
+                <button class="form_settings_popup_button" onclick="hideItem('anonymize_confirmation_overlay')">Cancel</button>
             </div>
         </div>
     </div>
