--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -15,12 +15,12 @@
 /* Overlay content */
 .overlay_delete {
     position: relative;
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    height: 40%;
-    background-color: rgb(92, 0, 0);
-    padding: 50px 100px; 
+    margin-top: 15%;
+    margin-left: 24.5%;
+    width: 950px;
+    height: 350px;
+    background-color: rgb(113, 0, 0);
+    padding: 50px 100px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     text-align: center;
@@ -30,12 +30,12 @@
 .overlay_anonymize
 {
     position: relative;
-    top: 25%;
-    left: 25%;
-    width: 50%;
-    height: 40%;
-    background-color: rgb(158, 152, 0);
-    padding: 50px 100px; 
+    margin-top: 15%;
+    margin-left: 24.5%;
+    width: 950px;
+    height: 350px;
+    background-color: rgb(121, 121, 121);
+    padding: 50px 100px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     text-align: center;
