tournament options wip

--- a/app/frontend/html/templates/en/tournament_options.html
+++ b/app/frontend/html/templates/en/tournament_options.html
@@ -1,4 +1,4 @@
-
+<!-- 
 </div>
     <div class="form_container">
         <div class="form_body_xl">
@@ -43,5 +43,19 @@
             <button class="form_main_button">Iniciar Torneo</button>
             <button class="form_main_button_reduced_margin">Eliminar Torneo</button>
         </div>
+    </div>
+</div> -->
+
+
+<div class="form_container">
+    <div class="form_body_xl">
+        <p class="form_title">Esperando a los jugadores...</p>
+        <p id="tournament_name"></p>
+        <p id="game_type"></p>
+        <div class="tour_options_subscroll" id="player_container">
+            <!-- Player cards will be dynamically inserted here -->
+        </div>
+        <button class="form_main_button">Iniciar Torneo</button>
+        <button class="form_main_button_reduced_margin">Eliminar Torneo</button>
     </div>
 </div>
