tournament start wip

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -160,7 +160,10 @@
     Password must contain at least 8 characters, 1 uppercase letter, 1 lowercase letter, 1 number and 1 special character
 </div>
 
-
 <div class="alert alert-danger" role="alert" id="not-in-tournament" onclick="hideAlert(this)" style="display: none;">
     You are not in the tournament
+</div>
+
+<div class="alert alert-danger" role="alert" id="no-tournaments" onclick="hideAlert(this)" style="display: none;">
+    You are not hosting any tournament right now
 </div>
