--- a/app/frontend/html/templates/en/tournament_bracket.html
+++ b/app/frontend/html/templates/en/tournament_bracket.html
@@ -1,29 +1,27 @@
 
-<p class="bracket_title"><b>NOMBRE DEL TORNEO:</b> Tres en raya extremo</p>
-<p class="bracket_subtitle">Espera a que el anfitrion inicie el torneo.</p>
+<p id="tournament_name" class="bracket_title"></p>
 <div class="bracket_button_container">
-    <button class="bracket_button">Abandonar</button>
+    <button class="bracket_button" onclick="DeleteTournament()">Abandonar</button>
     <button class="bracket_button">Iniciar</button>
 </div>
 <div class="bracket_container">
     <div class="bracket_body_outer">
         <p id="bracket_title">Clasificación</p>
             <div class="bracket_body_inner">
-                <div id="bracket_qual1"><p class="bracket_player_win">Clasificatoria 1</p></div>
-                <div id="bracket_qual2"><p class="bracket_player_greyed_out">Clasificatoria 2</p></div>
-                <div id="bracket_qual3"><p class="bracket_player_next_up">Clasificatoria 3</p></div>
-                <div id="bracket_qual4"><p class="bracket_player_next_up">Clasificatoria 4</p></div>
-                <div id="bracket_qual5"><p class="bracket_player_neutral">Clasificatoria 5</p></div>
-                <div id="bracket_qual6"><p class="bracket_player_neutral">Clasificatoria 6</p></div>
-                <div id="bracket_qual7"><p class="bracket_player_neutral">Clasificatoria 7</p></div>
-                <div id="bracket_qual8"><p class="bracket_player_neutral">Clasificatoria 8</p></div>
-                <div id="bracket_semi1"><p class="bracket_player_neutral">Semifinal 1</p></div>
-                <div id="bracket_semi2"><p class="bracket_player_neutral">Semifinal 2</p></div>
-                <div id="bracket_semi3"><p class="bracket_player_neutral">Semifinal 3</p></div>
-                <div id="bracket_semi4"><p class="bracket_player_neutral">Semifinal 4</p></div>
-                <div id="bracket_winner"><p class="bracket_player_neutral">Final</div>
+                <div id="bracket_qual1"><p class="bracket_player_win"></p></div>
+                <div id="bracket_qual2"><p class="bracket_player_greyed_out"></p></div>
+                <div id="bracket_qual3"><p class="bracket_player_next_up"></p></div>
+                <div id="bracket_qual4"><p class="bracket_player_next_up"></p></div>
+                <div id="bracket_qual5"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_qual6"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_qual7"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_qual8"><p class="bracket_player_neutral"></p></div>
+                <div id="bracket_semi1"><p class="bracket_player_neutral">???</p></div>
+                <div id="bracket_semi2"><p class="bracket_player_neutral">???</p></div>
+                <div id="bracket_semi3"><p class="bracket_player_neutral">???</p></div>
+                <div id="bracket_semi4"><p class="bracket_player_neutral">???</p></div>
+                <div id="bracket_winner"><p class="bracket_player_neutral">??? vs ???</div>
             </div>
         </div>
     </div>
 </div>
-<p class="bracket_footer">Los resultados aparecerán en tu <b>perfil</b> y en la página de <b>puntuaciones</b>.</p>
