Fixed tournament creation check, added name validation and fixed logout alerts

--- a/app/frontend/html/templates/en/alert.html
+++ b/app/frontend/html/templates/en/alert.html
@@ -167,3 +167,7 @@
 <div class="alert alert-danger" role="alert" id="no-tournaments" onclick="hideAlert(this)" style="display: none;">
     You are not hosting any tournament right now
 </div>
+
+<div class="alert alert-danger" role="alert" id="invalid-tournament-name" onclick="hideAlert(this)" style="display: none;">
+    Invalid tournament name
+</div>
