--- a/app/frontend/html/templates/en/header.html
+++ b/app/frontend/html/templates/en/header.html
@@ -6,8 +6,7 @@
         <button class="h_flag_button"><img class="h_flag" src="../media/uk_flag.svg" data-lang="en"></button>
         <button class="h_flag_button"><img class="h_flag" src="../media/french_flag.svg" data-lang="fr"></button>
     </div>
-    <a href="#tournaments"><div class="h_basic">TOURNAMENTS</div></a>
-    <a href="#scores"><div class="h_basic">SCOREBOARD</div></a>
+    <a href="#scoreboard"><div class="h_basic">SCOREBOARD</div></a>
     <a href="#register"><div id="h_register">SIGNUP</div></a>
     <a href="#login"><div id="h_login">LOGIN</div></a>
 </div>
