Tournament bracket working until the end. Missing checks after final. Hardcoded Pong tournaments. ª

--- a/app/frontend/html/templates/en/tournament_bracket.html
+++ b/app/frontend/html/templates/en/tournament_bracket.html
@@ -2,7 +2,7 @@
 <p id="tournament_name" class="bracket_title"></p>
 <div class="bracket_button_container">
     <button class="bracket_button" onclick="DeleteTournament()">Abandonar</button>
-    <button class="bracket_button">Iniciar</button>
+    <button class="bracket_button" onclick="StartMatch()">Iniciar</button>
 </div>
 <div class="bracket_container">
     <div class="bracket_body_outer">
