added winner popup to tournament_bracket and tweaked settings

--- a/app/frontend/html/templates/en/tournament_bracket.html
+++ b/app/frontend/html/templates/en/tournament_bracket.html
@@ -22,6 +22,11 @@
                 <div id="bracket_semi4"><p class="bracket_player_neutral">???</p></div>
                 <div id="bracket_winner"><p class="bracket_player_neutral">??? vs ???</div>
             </div>
-        </div>
+    </div>
+</div>
+<div id="anonymize_confirmation_overlay" class="overlay" style="display: none;">
+    <div class="overlay_winner">
+        <p><span id="winner_username">[USERNAME]</span> has won the tournament!</p>
+        <button class="form_settings_popup_button">Exit</button>
     </div>
 </div>
