--- a/app/frontend/css/basic.css
+++ b/app/frontend/css/basic.css
@@ -25,6 +25,20 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     text-align: center;
     font-size: 28px;
+    font-family: "Jetbrains Mono";
+}
+
+.overlay_winner
+{
+    width: 950px;
+    height: 250px;
+    background-color: rgb(121, 121, 121);
+    padding: 50px 100px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    text-align: center;
+    font-size: 28px;
+    font-family: "Jetbrains Mono";
 }
 
 .overlay_anonymize
@@ -40,6 +54,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     text-align: center;
     font-size: 28px;
+    font-family: "Jetbrains Mono";
 }
 
 .overlay_content p {
